force-app/main/default/objects/Mobile_App_Log__c/Mobile_App_Log__c.object-meta.xml
<CustomObject>
    <label>Mobile App Log</label>
    <nameField>
        <displayFormat>Log-{YY}-{MM}-{0000000}</displayFormat>
        <label>Mobile App Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Mobile App Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>