force-app/main/default/objects/Mobile_App_Log__c/fields/Applicant_Detail__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Detail__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Applicant Detail</label>
    <referenceTo>PropStrength__Applicant_Detail__c</referenceTo>
    <relationshipLabel>Mobile App Logs</relationshipLabel>
    <relationshipName>Mobile_App_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>