force-app/main/default/objects/Mobile_App_Log__c/fields/Application_Booking__c.field-meta.xml
<CustomField>
    <fullName>Application_Booking__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application / Booking</label>
    <referenceTo>PropStrength__Application_Booking__c</referenceTo>
    <relationshipLabel>Mobile App Logs</relationshipLabel>
    <relationshipName>Mobile_App_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>