force-app/main/default/objects/Mobile_App_Log__c/fields/Master_Project__c.field-meta.xml
<CustomField>
    <fullName>Master_Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Master Project</label>
    <referenceTo>Master_Project__c</referenceTo>
    <relationshipLabel>Mobile App Logs</relationshipLabel>
    <relationshipName>Mobile_App_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>