force-app/main/default/objects/Mobile_App_Log__c/fields/Notifications_Slug__c.field-meta.xml
<CustomField>
    <fullName>Notifications_Slug__c</fullName>
    <label>Notifications Slug</label>
    <length>255</length>
    <type>Text</type>
</CustomField>