force-app/main/default/objects/Mobile_App_Log__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>PropStrength__Projects__c</referenceTo>
    <relationshipLabel>Mobile App Logs</relationshipLabel>
    <relationshipName>Mobile_App_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>