force-app/main/default/objects/Mobile_App_Log__c/fields/Property__c.field-meta.xml
<CustomField>
    <fullName>Property__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Property</label>
    <referenceTo>PropStrength__Property__c</referenceTo>
    <relationshipLabel>Mobile App Logs</relationshipLabel>
    <relationshipName>Mobile_App_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>